carga de datos: listo para entrega

--- a/2.- Crea_corpus.ipynb
+++ b/2.- Crea_corpus.ipynb
@@ -2,12 +2,27 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Chiriviki/congreso/blob/master/2.-%20Crea_corpus.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "0b6e4fbc-d579-4c4b-998d-bc18c3136309",
       "metadata": {
         "id": "0b6e4fbc-d579-4c4b-998d-bc18c3136309"
       },
       "source": [
         "# 2.- Creación del corpus\n",
+        "\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/Chiriviki/congreso/blob/master/2.-%20Crea_corpus.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>\n",
+        "\n",
         "\n",
         "Este cuaderno toma los textos extraídos y trata de:\n",
         "- Extraer metadatos y anexarlos a cada intervención.\n",
@@ -27,11 +42,11 @@
         "!pip install altair==5.0.0"
       ],
       "metadata": {
-        "id": "sSR4BDdhvzAW",
-        "outputId": "f4d44404-fcf3-4817-b4d4-a1aaf6db8495",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sSR4BDdhvzAW",
+        "outputId": "f4d44404-fcf3-4817-b4d4-a1aaf6db8495"
       },
       "id": "sSR4BDdhvzAW",
       "execution_count": 1,
@@ -82,12 +97,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "BB_EK6uKxmVK",
-        "outputId": "d2e4e733-6410-4a08-9595-30a52ef615cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "BB_EK6uKxmVK",
+        "outputId": "d2e4e733-6410-4a08-9595-30a52ef615cb"
       },
       "id": "BB_EK6uKxmVK",
       "execution_count": 3,
@@ -124,11 +139,11 @@
         "!unzip dataset.zip -d \"dataset\""
       ],
       "metadata": {
-        "id": "JiMOXHy0tRST",
-        "outputId": "4d784005-9f76-4f7d-9df9-3a3044ea8dfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JiMOXHy0tRST",
+        "outputId": "4d784005-9f76-4f7d-9df9-3a3044ea8dfc"
       },
       "id": "JiMOXHy0tRST",
       "execution_count": 4,
@@ -445,11 +460,11 @@
       "metadata": {
         "scrolled": true,
         "tags": [],
-        "id": "23c2fefd-9565-4aae-9255-e83fb84c34fd",
-        "outputId": "b2d71c60-84a0-49b7-e5a7-403ff6351411",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "23c2fefd-9565-4aae-9255-e83fb84c34fd",
+        "outputId": "b2d71c60-84a0-49b7-e5a7-403ff6351411"
       },
       "outputs": [
         {
@@ -1320,11 +1335,11 @@
       "execution_count": 7,
       "id": "7e640d4c-ee6a-4510-abe8-00b770fd8849",
       "metadata": {
-        "id": "7e640d4c-ee6a-4510-abe8-00b770fd8849",
-        "outputId": "2d8db7dd-e293-41c3-ae11-46c97b13ab96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7e640d4c-ee6a-4510-abe8-00b770fd8849",
+        "outputId": "2d8db7dd-e293-41c3-ae11-46c97b13ab96"
       },
       "outputs": [
         {
@@ -1395,12 +1410,12 @@
       "execution_count": 9,
       "id": "5ad3ad78-0863-4869-9304-0b64cc7133fe",
       "metadata": {
-        "id": "5ad3ad78-0863-4869-9304-0b64cc7133fe",
-        "outputId": "a5c8de88-61f9-4c02-86ed-c7950670a296",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
-        }
+        },
+        "id": "5ad3ad78-0863-4869-9304-0b64cc7133fe",
+        "outputId": "a5c8de88-61f9-4c02-86ed-c7950670a296"
       },
       "outputs": [
         {
@@ -1621,12 +1636,12 @@
       "execution_count": 10,
       "id": "ea6afc77-cfe2-431a-b4d7-6908e255f344",
       "metadata": {
-        "id": "ea6afc77-cfe2-431a-b4d7-6908e255f344",
-        "outputId": "c73711cf-7ed4-46be-8219-73afbd0f92a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
-        }
+        },
+        "id": "ea6afc77-cfe2-431a-b4d7-6908e255f344",
+        "outputId": "c73711cf-7ed4-46be-8219-73afbd0f92a0"
       },
       "outputs": [
         {
@@ -1837,11 +1852,11 @@
       "execution_count": 11,
       "id": "a421720a-e805-4b63-bcbf-d84f9a3ffcab",
       "metadata": {
-        "id": "a421720a-e805-4b63-bcbf-d84f9a3ffcab",
-        "outputId": "c9a1b0a7-d3d7-4395-8319-260ace671d5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a421720a-e805-4b63-bcbf-d84f9a3ffcab",
+        "outputId": "c9a1b0a7-d3d7-4395-8319-260ace671d5c"
       },
       "outputs": [
         {
@@ -1902,11 +1917,11 @@
       "execution_count": 13,
       "id": "f40687a5-1e88-4646-b316-12ffe63eaaca",
       "metadata": {
-        "id": "f40687a5-1e88-4646-b316-12ffe63eaaca",
-        "outputId": "0b765292-ca13-4464-f136-5005b46fe59b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f40687a5-1e88-4646-b316-12ffe63eaaca",
+        "outputId": "0b765292-ca13-4464-f136-5005b46fe59b"
       },
       "outputs": [
         {
@@ -1939,11 +1954,11 @@
       "execution_count": 14,
       "id": "e4f9ef0e-61b1-45d7-99ca-830bb13bb1be",
       "metadata": {
-        "id": "e4f9ef0e-61b1-45d7-99ca-830bb13bb1be",
-        "outputId": "bf012789-e23c-4a0f-975d-a94b59a40663",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e4f9ef0e-61b1-45d7-99ca-830bb13bb1be",
+        "outputId": "bf012789-e23c-4a0f-975d-a94b59a40663"
       },
       "outputs": [
         {
@@ -2023,11 +2038,11 @@
       "execution_count": 17,
       "id": "56eaec09-7595-4a67-b8f5-8e11398acfcd",
       "metadata": {
-        "id": "56eaec09-7595-4a67-b8f5-8e11398acfcd",
-        "outputId": "4950fa68-69ea-4a45-ed5c-4e71ce5d9b26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "56eaec09-7595-4a67-b8f5-8e11398acfcd",
+        "outputId": "4950fa68-69ea-4a45-ed5c-4e71ce5d9b26"
       },
       "outputs": [
         {
@@ -2107,11 +2122,11 @@
       "execution_count": 20,
       "id": "85853e64-8a9c-4651-bf76-d3ea4813004d",
       "metadata": {
-        "id": "85853e64-8a9c-4651-bf76-d3ea4813004d",
-        "outputId": "53adf0bb-75a9-464a-b6c5-77ac23c48add",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "85853e64-8a9c-4651-bf76-d3ea4813004d",
+        "outputId": "53adf0bb-75a9-464a-b6c5-77ac23c48add"
       },
       "outputs": [
         {
@@ -2174,11 +2189,11 @@
       "execution_count": 22,
       "id": "3f17c8cb-6fa8-46ba-951b-09c980b367ae",
       "metadata": {
-        "id": "3f17c8cb-6fa8-46ba-951b-09c980b367ae",
-        "outputId": "24a9044e-275b-4b28-ea8a-2a804415d412",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3f17c8cb-6fa8-46ba-951b-09c980b367ae",
+        "outputId": "24a9044e-275b-4b28-ea8a-2a804415d412"
       },
       "outputs": [
         {
@@ -2266,11 +2281,11 @@
       "execution_count": 24,
       "id": "b9cbc5a9-5199-4574-aa1e-ed985d3cb1d2",
       "metadata": {
-        "id": "b9cbc5a9-5199-4574-aa1e-ed985d3cb1d2",
-        "outputId": "06e2dff6-1730-4f68-d3cf-3a99874c9989",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b9cbc5a9-5199-4574-aa1e-ed985d3cb1d2",
+        "outputId": "06e2dff6-1730-4f68-d3cf-3a99874c9989"
       },
       "outputs": [
         {
@@ -2334,11 +2349,11 @@
       "execution_count": 25,
       "id": "528214ed-c516-4ea9-a31e-fa16d3ab423c",
       "metadata": {
-        "id": "528214ed-c516-4ea9-a31e-fa16d3ab423c",
-        "outputId": "0014363d-25a8-44dc-a491-76bd229b3d45",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "528214ed-c516-4ea9-a31e-fa16d3ab423c",
+        "outputId": "0014363d-25a8-44dc-a491-76bd229b3d45"
       },
       "outputs": [
         {
@@ -2417,11 +2432,11 @@
       "execution_count": 27,
       "id": "da108013-d2c8-4a46-b2cd-acb012cbcd2e",
       "metadata": {
-        "id": "da108013-d2c8-4a46-b2cd-acb012cbcd2e",
-        "outputId": "8ee52243-5cec-400d-a955-76002e0fd495",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "da108013-d2c8-4a46-b2cd-acb012cbcd2e",
+        "outputId": "8ee52243-5cec-400d-a955-76002e0fd495"
       },
       "outputs": [
         {
@@ -2458,11 +2473,11 @@
       "execution_count": 28,
       "id": "b7c8a24f-310f-444f-9e4d-e36bbcb3a808",
       "metadata": {
-        "id": "b7c8a24f-310f-444f-9e4d-e36bbcb3a808",
-        "outputId": "19dfbe59-7941-491a-ce01-508a462721ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b7c8a24f-310f-444f-9e4d-e36bbcb3a808",
+        "outputId": "19dfbe59-7941-491a-ce01-508a462721ef"
       },
       "outputs": [
         {
@@ -2482,12 +2497,12 @@
       "execution_count": 29,
       "id": "8f875094-2ba0-4866-baa0-92ab2af07f07",
       "metadata": {
-        "id": "8f875094-2ba0-4866-baa0-92ab2af07f07",
-        "outputId": "add52118-213a-441e-c5ac-81aaed3cca49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 213
-        }
+        },
+        "id": "8f875094-2ba0-4866-baa0-92ab2af07f07",
+        "outputId": "add52118-213a-441e-c5ac-81aaed3cca49"
       },
       "outputs": [
         {
@@ -2591,12 +2606,12 @@
       "execution_count": 30,
       "id": "70719fcb-a993-41ca-b801-b335a50787f2",
       "metadata": {
-        "id": "70719fcb-a993-41ca-b801-b335a50787f2",
-        "outputId": "65fee736-a657-41cd-e434-f02cb9d584d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
-        }
+        },
+        "id": "70719fcb-a993-41ca-b801-b335a50787f2",
+        "outputId": "65fee736-a657-41cd-e434-f02cb9d584d6"
       },
       "outputs": [
         {
@@ -2773,12 +2788,12 @@
       "execution_count": 31,
       "id": "ff31e6ce-0f3e-4235-8ff9-3b1908e991c4",
       "metadata": {
-        "id": "ff31e6ce-0f3e-4235-8ff9-3b1908e991c4",
-        "outputId": "0b0e3e03-66ef-4d1f-c1b8-32baca4ebeff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
-        }
+        },
+        "id": "ff31e6ce-0f3e-4235-8ff9-3b1908e991c4",
+        "outputId": "0b0e3e03-66ef-4d1f-c1b8-32baca4ebeff"
       },
       "outputs": [
         {
@@ -2902,12 +2917,12 @@
       "execution_count": 32,
       "id": "b847f8f8-b43f-42f4-8e46-aff529594f8b",
       "metadata": {
-        "id": "b847f8f8-b43f-42f4-8e46-aff529594f8b",
-        "outputId": "1f06d94f-eed1-4e00-dd96-889bc949d334",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "b847f8f8-b43f-42f4-8e46-aff529594f8b",
+        "outputId": "1f06d94f-eed1-4e00-dd96-889bc949d334"
       },
       "outputs": [
         {
@@ -3143,12 +3158,12 @@
       "execution_count": 33,
       "id": "7c262bc7-c4a5-410b-8e4d-3961a9167d71",
       "metadata": {
-        "id": "7c262bc7-c4a5-410b-8e4d-3961a9167d71",
-        "outputId": "81ecd481-729a-42c7-858a-a30e0bfab306",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 280
-        }
+        },
+        "id": "7c262bc7-c4a5-410b-8e4d-3961a9167d71",
+        "outputId": "81ecd481-729a-42c7-858a-a30e0bfab306"
       },
       "outputs": [
         {
@@ -3291,7 +3306,8 @@
       "version": "3.11.0"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
